# ef

./: .arcconfig  .arclint  .gitignore  .gitmodules  .travis.yml  Ef.cabal  LICENSE  README.md  default.nix  ef.cabal  ef.nix  mop.cabal  shell.nix  stack.yaml
base/src/Ef/: Fork.hs
bench/: Bench.hs
bench/Bench/: AltState.hs  Functor.hs  Interpreter.hs  Noop.hs  Pipes.hs  RWS.hs  Reader.hs  Shared.hs  State.hs  Writer.hs
bench/Bench/Pipes/: Chain.hs
core/icebox/: Exit.hs
core/icebox/Exit/: Attribute.hs
core/src/: doctests.hs
core/src/Ef/: Ma.hs  Narrative.hs  Nat.hs  Object.hs  Set.hs
ef-base/: ef-base.cabal  stack.yaml
ef-base/src/Data/: Promise.hs  Queue.hs
ef-base/src/Ef/: Base.hs  Bidir.hs  Contract.hs  Event.hs  Except.hs  Exit.hs  Fiber.hs  Fork.hs  Generate.hs  Get.hs  Guard.hs  IO.hs  Knot.hs  Manage.hs  Note.hs  Pipes.hs  Reader.hs  Reflect.hs  Set.hs  Single.hs  State.hs  Sync.hs  Var.hs  Writer.hs
ef-base/src/Ef/Base/: Set.hs  View.hs
ef-base/src/Ef/Base/Get/: Attribute.hs
ef-base/src/Ef/Base/Note/: Lexicon.hs
ef-base/src/Ef/Base/View/: Context.hs
ef-base/src/Ef/Event/: ST.hs
ef-base/src/Ef/Except/: Messages.hs  Methods.hs
ef-base/src/Ef/Fiber/: Messages.hs  Methods.hs
ef-base/src/Ef/Get/: Messages.hs  Methods.hs
ef-base/src/Ef/Knot/: Messages.hs  Methods.hs
ef-base/src/Ef/Knot/Messages/: Single.hs
ef-base/src/Ef/Knot/Methods/: Single.hs
ef-base/src/Ef/Manage/: Messages.hs  Methods.hs
ef-base/src/Ef/Pipes/: Group.hs  Parse.hs
ef-base/src/Ef/Reader/: Messages.hs  Methods.hs
ef-base/src/Ef/Scoped/: Event.hs  Exit.hs
ef-base/src/Ef/Scoped/Scoped/: Guard.hs
ef-base/src/Ef/Set/: .#Attribute.hs  Messages.hs  Methods.hs
ef-base/src/Ef/State/: Messages.hs  Methods.hs
ef-base/src/Ef/Writer/: Attribute.hs  Lexicon.hs  Messages.hs  Methods.hs
ef-base/src/System/Random/: Shuffle.hs
ef-base/test/: Knots.hs
ef-core/: Ef.cabal  ef-core.cabal  stack.yaml
ef-core/icebox/: Call.hs  Try.hs  Vary.hs
ef-core/icebox/Exit/: Lexicon.hs
ef-core/src/: Ef.hs
ef-core/src/Ef/: Codensity.hs  Exception.hs  Ma.hs  Machine.hs  Messages.hs  Methods.hs  Narrative.hs  Nat.hs  Object.hs  Set.hs  Traits.hs
ef-core/src/Ef/Type/: Comments.hs  List.hs  Nat.hs  Set.hs
ef-web/client/: ef-web-client.cabal
ef-web/client/app/: Ease.hs  Main.hs  Router.hs
ef-web/client/app/Templating/: Bootstrap.hs  Simple.hs
ef-web/client/src/: Document.hs  Element.hs  Event.hs  HTML.hs  Lib.hs  Queue.hs  Router.hs  Signaled.hs  Signals.hs  Web.hs
ef-web/client/src/Web/: Messages.hs  Methods.hs
ef-web/server/: ef-web-server.cabal
ef-websocket/: ef-websocket.cabal
ef-websocket/src/: WebSocket.hs
fusion-flex/: fusion-flex.cabal
fusion-flex/src/: Flex.hs
fusion-websocket/: LICENSE  fusion-websocket.cabal
fusion-websocket/src/: .#WebSocket.hs  WebSocket.hs
icebox/: Notate.hs  Or.hs
icebox/Exit/: Lexemes.hs
icebox/test/: Call.hs
obvyus/: closure.sh  obvyus.cabal  stack.yaml
obvyus-client/: closure.sh  obvyus-client.cabal  stack.yaml
obvyus-client/src/: Main.hs  Modal.hs  Obvyus.hs  Old.hs  Utility.hs
obvyus-client/src/Modal/: Entry.hs
obvyus-server/: obvyus-server.cabal
obvyus-server/src/: Main.hs
obvyus-shared/: obvyus-shared.cabal
obvyus/src/: App.hs  Components.hs  Listing.hs  Listings.hs  Main.hs  Main_old.hs  Menu.hs  Modal.hs  Model.hs  Page.hs
obvyus/src/Component/: Body.hs  Divider.hs  Footer.hs  Header.hs  Login.hs  Modal.hs  Util.hs
obvyus/src/Modal/: Entry.hs  Notification.hs
obvyus/src/View/: About.hs  Contact.hs  Interesting.hs  Listings.hs  Login.hs  Privacy.hs  Provacative.hs
src/: Checked.hs  Derives.hs  Ef.hs  Efreet.hs  Evaluation.hs  Example.hs  Fixable.hs  Generate.hs  Generate_old.hs  Has.hs  Instruction.hs  Interpreter.hs  Lift.hs  Main.hs  Mop.hs  Mop.lhs  New.hs  NewPrime.hs  Optimize.hs  Pairing.hs  Pairing.lhs  Product.hs  Product.lhs  Show.hs  Subsumption.hs  Sum.hs  Synonyms.hs  Test.hs  doctests.hs
src/Arch/Project/: Version.hs
src/Attr/: Notate.hs  Vary.hs  View.hs
src/Data/: Could.hs  Promise.hs  Queue.hs
src/Ef/: Core.hs  IO.hs  Interpreter.hs  Path.hs  Runtime.hs
src/Ef/Attr/: Notate.hs  Vary.hs  View.hs
src/Ef/Context/: Get.hs  Note.hs  Reflect.hs  State.hs
src/Ef/Core/: Codensity.hs  Inflect.hs  Narrative.hs  Object.hs  Pattern.hs  Witness.hs
src/Ef/Data/: MaxHeap.hs  MedianHeap.hs  MinHeap.hs  Promise.hs  Queue.hs
src/Ef/IO/: Dir.hs  File.hs  Path.hs
src/Ef/Lang/: Call.hs  Checked.hs  Contract.hs  Event.hs  Except.hs  Fiber.hs  Fork.hs  Generate.hs  Get.hs  IO.hs  IfThenElse.hs  Knot.hs  Notate.hs  Note.hs  Reflect.hs  Set.hs  State.hs  Var.hs  Variable.hs  Vary.hs  View.hs
src/Ef/Runtime/: Before.hs
src/Ef/Type/: Bool.hs  Comments.hs  Set.hs
src/Effect/: Actor.hs  Bidir.hs  Capture.hs  Choose.hs  Concurrent.hs  Continuation.hs  Contract.hs  Divergence.hs  Exception.hs  For.hs  Fresh.hs  Interleave.hs  List.hs  Logic.hs  Loop.hs  Maybe.hs  Pipes.hs  Possibly.hs  Reactive.hs  Reader.hs  Resource.hs  State.hs  Thread.hs  Threading.hs  Transient.hs  Try.hs  Weave.hs  Writer.hs
src/Effect/Local/: Journaler.hs  State.hs  Writer.hs
src/Effect/Reader/: Local.hs
src/Effect/Stream/: Pure.hs
src/Generate/: Cabal.hs  DSL.hs  Derives.hs  Module.hs  Monad.hs  Representation.hs  Splice.hs  Utils.hs
src/Generate/DSL/: Expand.hs  Helpers.hs  Project.hs
src/Generate/Splice/: Import.hs  Pragma.hs
src/Lang/: Contract.hs
src/Lang/Global/: Except.hs  Fork.hs  IO.hs  IfThenElse.hs
src/Lang/Scoped/: Act.hs  Alternate.hs  Diverge.hs  Exit.hs  Generate.hs  Guard.hs  Log.hs  Manage.hs  Notate.hs  Or.hs  React.hs  Task.hs  Thread.hs  Try.hs  Vary.hs  Weave.hs
src/Mop/: Algebra.hs  Base.hs  Coalgebra.hs  Computer.hs  Core.hs  IO.hs  Instruction.hs  Instructions.hs  Interpreter.hs  Pairings.hs  Symbols.hs  Tape.hs  Trans.hs
test/: Alternate.hs  Call.hs  Fiber.hs  Main.aux  Main.hp  Main.hs  Main.prof  Main.ps  Task.hs  Thread.hs  Weave.hs
tests/: Test.hs
tests/Ef/: Noop.hs  Pipes.bak  Pipes.hs  Reader.hs  State.hs  Writer.hs
tests/Ef/Pipes/: Prelude.hs
(+110 files in other folders)
