name:                ef
version:             3.0.0.0
synopsis:
homepage:            github.com/grumply/ef
license:             BSD3
license-file:        LICENSE
author:              S. M. Hickman
maintainer:          sean@grump.ly
category:            Development, Language
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs: src
  exposed-modules:
      Ef.Type.Set
      Ef.Type.Nat
      Ef.Type.Bool
      Ef.Type.List
      Ef.Path
      Ef.Interpreter
      Ef
  build-depends:
      base >=4.8
    , comonad
    , free
    , kan-extensions
    , transformers
    , transformers-base
    , mmorph
    , monad-control
    , mtl
    , resourcet
    , exceptions
  default-language: Haskell2010
