name:                ef
version:             3.0.0.0
synopsis:
homepage:            purehs.org/doc/ef
license:             BSD3
license-file:        LICENSE
author:              Sean Hickman
maintainer:          sean@grumply.com
category:            Development, Language
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/grumply/ef.git

library
  hs-source-dirs: src tests
  exposed-modules:
      Ef.Type.Set
      Ef.Type.Nat
      Ef.Type.Bool
      Ef.Type.List
      Ef.Path
      Ef.Interpreter
      Ef
      Ef.Pipes
      Ef.Pipes.Prelude
  build-depends:
      base >=4.8
    , comonad
    , free
    , kan-extensions
    , transformers
    , transformers-base
    , mmorph
    , monad-control
    , mtl
    , resourcet
    , exceptions
  default-language: Haskell2010

