name:                ef-base
version:             3.0.0.0
synopsis:            Base libraries to enable more convenient Ef development including mtl-style computation components.
-- description:
homepage:            ef-lang.org
license:             BSD3
license-file:        LICENSE
author:              S. M. Hickman
maintainer:          sean@grump.ly
-- copyright:
-- category:
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10


library
  exposed-modules:   Data.Promise
                     Data.Queue
                     System.Random.Shuffle
                     Ef.Pipes
                     Ef.State
                     Ef.Writer
                     Ef.Reader
                     Ef.Get
                     Ef.Set
                     Ef.Sync
                     Ef.Var
                     Ef.Reflect
                     Ef.Note
                     Ef.Manage
                     Ef.Guard
                     Ef.Generate
                     Ef.Fork
                     Ef.Fiber
                     Ef.Exit
                     Ef.Except
                     Ef.Event
                     Ef.Base
                     Ef.Stream
                     -- , Ef.Pipes.Parse
                     -- , Ef.Pipes.Group
                     -- , Ef.Event.ST
  -- other-modules:
  -- other-extensions:
  default-extensions:  DataKinds
                       KindSignatures
                       TypeOperators
                       MultiParamTypeClasses
                       FlexibleContexts
                       BangPatterns
                       GADTs
                       RankNTypes
                       NoMonomorphismRestriction
                       ScopedTypeVariables
                       ExistentialQuantification
                       PatternSynonyms
                       ViewPatterns
                       DeriveFunctor
                       RecordWildCards
                       InstanceSigs
  if (impl(ghcjs))
    build-depends:      base >=4.8
                      , ef-core >= 3
                      , random >= 1.1
                      , ghc-prim
                      , mtl
                      , ghcjs-base
                      , transformers
                      , comonad
                      , free
                      , semigroups
  else
    build-depends:      base >=4.8
                      , ef-core >= 1.6
                      , random >= 1.1
                      , ghc-prim
                      , mtl
                      , unagi-chan
                      , transformers
                      , comonad
                      , free
                      , semigroups

  hs-source-dirs:      src
  default-language:    Haskell2010
