
name:                ef-core
version:             1.6.0.0
synopsis:
-- description:
homepage:            ef-lang.org
license:             BSD3
license-file:        LICENSE
author:              S. M. Hickman
maintainer:          sean@grump.ly
-- copyright:
category:            Development, Language
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  exposed-modules:
                  Ef
                  Ef.Narrative
                  Ef.Type.Set
                  Ef.Type.Nat
                  Ef.Traits
                  Ef.Messages
                  Ef.Ma
                  Ef.Object
                  Ef.Codensity
                  Ef.Machine

  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.8
                     , deepseq >= 1.4.1.1
                     , ghc-prim
                     , exceptions >= 0.8
                     , transformers >= 0.4
                     , mtl >= 2.2
                     , mmorph
                     , comonad
                     , free
  hs-source-dirs:      src
  default-language:    Haskell2010
