
name:                ef-core
version:             1.6.0.0
synopsis:
-- description:
homepage:            ef-lang.org
license:             BSD3
license-file:        LICENSE
author:              S. M. Hickman
maintainer:          sean@grump.ly
-- copyright:
category:            Development, Language
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable ef-test
  main-is:            Main.hs
  other-modules:      Ef.Type.Set
                      Ef.Type.Nat
                      Ef.Type.Bool
                      Ef.Type.List
                      Ef

  hs-source-dirs:     src
  default-language:   Haskell2010
  ghc-options:        -O2 -rtsopts
  default-extensions: MultiParamTypeClasses
                      GADTs 
                      DataKinds 
                      RankNTypes 
                      TypeFamilies 
                      TypeOperators 
                      FlexibleContexts 
                      FlexibleInstances 
                      ScopedTypeVariables 
                      UndecidableInstances 
                      ConstraintKinds 
                      PolyKinds 
                      FunctionalDependencies 
                      NoMonoLocalBinds 
                      InstanceSigs 
                      BangPatterns 
                      ViewPatterns
                      PatternSynonyms
                      DeriveFunctor
  build-depends:      base >=4.8
                    , comonad
                    , free
                    , kan-extensions
                    , ef-core == 1.6.*
                    , transformers

library
  exposed-modules: Ef.Type.Set
                   Ef.Type.Nat
                   Ef.Type.Bool
                   Ef.Type.List
                   Ef

  default-extensions: MultiParamTypeClasses
                      GADTs 
                      DataKinds 
                      RankNTypes 
                      TypeFamilies 
                      TypeOperators 
                      FlexibleContexts 
                      FlexibleInstances 
                      ScopedTypeVariables 
                      UndecidableInstances 
                      ConstraintKinds 
                      PolyKinds 
                      FunctionalDependencies 
                      NoMonoLocalBinds 
                      InstanceSigs 
                      BangPatterns 
                      ViewPatterns
                      PatternSynonyms
                      DeriveFunctor
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.8
                     , comonad
                     , free
                     , kan-extensions
                     , transformers
  hs-source-dirs:      src
  default-language:    Haskell2010
