name:                fusion-flex
version:             0.3.0.0
synopsis:            Flexbox layout library for the Ef-based fusion web framework.
-- description:         
homepage:            ef-lang.org/fusion-flex
license:             BSD3
license-file:        LICENSE
author:              S. M. Hickman
maintainer:          sean@grump.ly
-- copyright:           
category:            Web
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10



library
  exposed-modules:     Flex
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.8 && <4.9
                     , ef-core >= 1.2 && < 1.3
                     , fusion >= 0.4 && < 0.5
  hs-source-dirs:      src
  default-language:    Haskell2010
