name:                ef-web-client
version:             0.1.0.0
synopsis:            Library for writing Ef-based JS code.
description:         Please see README.md
homepage:            http://github.com/grumply/Ef.git
license:             BSD3
license-file:        LICENSE
author:              S. M. Hickman
maintainer:          sean@grump.ly
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , time >= 1.5 && < 1.7
                     , ef-core >= 1.0 && < 1.1
                     , ef-base >= 0.9 && < 1.0
                     , ghcjs-dom >= 0.2.3 && < 0.3
  default-language:    Haskell2010

executable ef-web-client-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , ef-web-client
                     , time >= 1.5 && < 1.7
                     , ef-core >= 1.0 && < 1.1
                     , ef-base >= 0.9 && < 1.0
                     , ghcjs-dom >= 0.2.3 && < 0.3
  default-language:    Haskell2010

test-suite ef-web-client-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , ef-web-client
                     , time >= 1.5 && < 1.7
                     , ef-core >= 1.0 && < 1.1
                     , ef-base >= 0.9 && < 1.0
                     , ghcjs-dom >= 0.2.3 && < 0.3
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

