name:                ef-web-client
version:             0.1.0.0
synopsis:            Library for writing Ef-based JS code.
description:         Please see README.md
homepage:            http://github.com/grumply/Ef.git
license:             BSD3
license-file:        LICENSE
author:              S. M. Hickman
maintainer:          sean@grump.ly
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Event, Queue, Signaled, HTML, Web, Web.Methods, Web.Messages, Router, Signals, Document, Element
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , transformers
                     , time >= 1.5 && < 1.7
                     , ef-core >= 1.0 && < 1.1
                     , ef-base >= 0.9 && < 1.0
                     , ghcjs-dom >= 0.2.3 && < 0.3
                     , ghcjs-base >= 0.2 && < 0.3
  default-language:    Haskell2010

executable ef-web-client-exe
  hs-source-dirs:      app
  other-modules:       Templating.Bootstrap, Templating.Simple
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , containers
                     , transformers
                     , ef-web-client
                     , time >= 1.5 && < 1.7
                     , ef-core >= 1.0 && < 1.1
                     , ef-base >= 0.9 && < 1.0
                     , ghcjs-dom >= 0.2.3 && < 0.3
                     , ghcjs-base >= 0.2 && < 0.3
  default-language:    Haskell2010
